Workaround for PATCH and CONNECT method bugs